# lilia-desktop

./: .gitignore  PRODUCTION.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bibliography.rs  commands.rs  formulas.rs  main.rs  recent_files.rs  settings.rs  versions.rs
src/components/: AboutDialog.tsx  ActivityBar.tsx  BibliographyPanel.tsx  Editor.tsx  FindReplaceDialog.tsx  FormulaBuilder.tsx  FormulaCard.tsx  FormulaLibrary.tsx  KeyboardShortcutsDialog.tsx  MenuBar.tsx  OutlinePanel.tsx  PresenceBar.tsx  Preview.tsx  SettingsDialog.tsx  ShareDialog.tsx  StatusBar.tsx  TemplateGallery.tsx  Toolbar.tsx  VersionHistoryPanel.tsx
src/components/ui/: Menubar.tsx  Toaster.tsx
src/hooks/: useAutoSave.ts  useFileDrop.ts  useImageDrop.ts  useKeyboardShortcuts.ts
src/lib/: exports.ts  lml-language.ts  lml-renderer.ts  lml-validator.ts  presence.ts  spell-checker.ts  templates.ts
src/lib/lilia/: index.ts  latex-importer.ts  lml-text-parser.ts  parser.ts  serializer.ts  types.ts
src/store/: app-store.ts  bibliography-store.ts  formula-store.ts  settings-store.ts  version-store.ts
src/styles/: globals.css
src/types/: formula.ts  nspell.d.ts
