[package]
name = "lilia-desktop"
version = "0.1.0"
description = "Scientific document editor with LML format"
authors = ["Lilia Team"]
license = "MIT"
repository = "https://github.com/lilia/lilia-desktop"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [
    "dialog-all",
    "fs-all",
    "path-all",
    "window-all",
    "global-shortcut-all",
    "shell-open"
] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
dirs = "5.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
flate2 = "1.0"
sha2 = "0.10"
hex = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
